cash.css: cash-park tables money fields were not correctly aligned on the footer.

--- a/site/htdocs/avanty/style/cash.css
+++ b/site/htdocs/avanty/style/cash.css
@@ -57,7 +57,7 @@ input[name="shift-begin-amount"] {
 	padding-right: 0.25em;
 }
 
-.cash-park-charge tbody td, .cash-park-charge tfoot td {
+.cash-park-charge tbody td, .cash-park-charge tfoot td, .cash-park-charge tfoot td:last-child {
 	position: relative;
 	padding: 0;
 	text-align: right;
